<resources>
    <string name="app_name">TCQR</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_encode" translatable="false">EncodeActivity</string>
    <string name="credit" translatable="false"> Name: Chung SeungUk</string>
    <string name="title_activity_decode" translatable="false">DecodeActivity</string>
    <string name="title1">Read QR Code</string>
    <string name="title2">Create QR Code</string>
    <string name="info1">You can decode QR Code here</string>
    <string name="info2">You can encode QR Code here</string>
    <string name="album_info1">You can read QR code from Camera album or Clipboard.\n Press the button below to select the method.</string>
    <string name="url_info1">Enter the URL below and press the Button to automatically download and read the image.</string>
    <string name="album_info">You can read QR code from <![CDATA[<b><font color=#03A9F4>Camera</b>]]> album or <![CDATA[<b><font color=#03A9F4>Clipboard</b>]]>. <![CDATA[<br>]]>Press the button below to select the method.</string>
    <string name="url_info">"Enter the <![CDATA[<b><font color=#03A9F4>URL</b>]]> below and press the <![CDATA[<b><font color=#03A9F4>Button</b>]]> to <![CDATA[<b><font color=#03A9F4>Automatically Download</b>]]> and read the image. "</string>
    <string name="title_activity_render" translatable="false">RenderActivity</string>
    <string name="title_activity_qrcode_info" translatable="false">QRCodeInfoActivity</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_created" translatable="false">CreatedActivity</string>
    <string name="nav_decode">Read QR Code</string>
    <string name="nav_encode">Create QR Code</string>
    <string name="nav_recent">Recent</string>
    <string name="title3">Recent</string>
    <string name="tab_album">album</string>
    <string name="tab_camera">camera</string>
    <string name="tab_url">url</string>
    <string name="encode_compress">Compress Text</string>
    <string name="encode_content">content</string>
    <string name="encode_no_input">content empty</string>
    <string name="encode_count">"content: "</string>
    <string name="encode_compress_required">More than 2000 characters can only generate QR Code after compression.</string>
    <string name="share">share</string>
    <string name="err_on_saveing_file">Error occured while saving image.</string>
    <string name="copy_clipboard">Copied to clipboard</string>
    <string name="copy_image">Copy image to clipboard</string>
    <string name="save_image">Save image</string>
    <string name="share_image">Share</string>
    <string name="choose_to">choose to...</string>
    <string name="saved_into">\"Image saved into: \"</string>
    <string name="qrcode">QR Code</string>
    <string name="content">Content</string>
    <string name="compressed_content">Compressed Content</string>
    <string name="developercredit">View Developers</string>
    <string name="image">Image</string>
    <string name="reset">Reset</string>
    <string name="clipboard">Clipboard</string>
    <string name="go">Go</string>
    <string name="insert_url">Insert URL here.</string>
    <string name="nav_credit"></string>
    <string name="error_decode">Error occured while scanning image. Make sure the image contains QR Code.</string>
    <string name="error_load">Error occured while getting image from clipboard. Make sure you copied image into clipboard.</string>
    <string name="decode_error_load_image">Error occured while loading image. Make sure you typed the right URL address.</string>
    <string name="decode_select_image">select image...</string>
    <string name="copy_into_clipboard">Copy image to clipboard</string>
    <string name="copy">Copy</string>
    <string name="info_developer">Developer Information</string>
    <string name="insert_url_here">URL empty</string>
    <string name="qr_info_is_compressed">TCQR Compressed</string>
    <string name="qr_info_view_text">View Content</string>
    <string name="request_write_permission">Please grant write permission to use this function</string>
    <string name="error_clipboard">There is no image copied on the clipboard, or the image is invalid.</string>
</resources>