<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.dyndns.wjdtmddnr24.tcqr.Fragment.ScanCodeWithURLFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        app:cardCornerRadius="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/album_imageview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/pf"
                android:orientation="vertical"
                android:paddingRight="10dp"
                android:paddingTop="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/url_rel_bot"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:id="@+id/url_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/url_info1"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/url_rel_bot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <EditText
                        android:id="@+id/url_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/url_go"
                        android:hint="@string/insert_url"
                        android:maxLines="1"
                        android:singleLine="true" />


                    <Button
                        android:id="@+id/url_go"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/go"/>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>