<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.dyndns.wjdtmddnr24.tcqr.RenderActivity"
    tools:showIn="@layout/activity_render">

    <RelativeLayout
        android:id="@+id/content_render"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="1dp">


                    <android.support.percent.PercentFrameLayout
                        android:id="@+id/pf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_aspectRatio="100%"
                            app:layout_widthPercent="100%">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentTop="true"
                                android:layout_margin="8dp"
                                android:text="@string/qrcode"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />

                            <ProgressBar
                                android:id="@+id/compressing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true" />

                            <ImageView
                                android:id="@+id/rendering"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:layout_margin="25dp"
                                android:visibility="invisible" />

                        </RelativeLayout>

                    </android.support.percent.PercentFrameLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="8dp"
                            android:text="@string/content"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/valueview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/view"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/album_info1"
                            android:transitionName="content" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/compresscedard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:visibility="invisible"
                    app:cardCornerRadius="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/cview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="8dp"
                            android:text="@string/compressed_content"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cvalueview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cview"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/album_info1" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>
